--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,11 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
     <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
-    <jdk.version>${maven.compiler.target}</jdk.version>
-    <slf4j.version>1.7.2</slf4j.version>
+    <slf4j.version>1.7.36</slf4j.version>
     <skipITs>true</skipITs>
   </properties>
 
@@ -49,12 +49,12 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.1</version>
+      <version>2.10.1</version>
     </dependency>
     <dependency>
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
-      <version>1.7.2</version>
+      <version>1.15.3</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -70,7 +70,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -81,7 +81,7 @@
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh-external</artifactId>
-        <version>1.0-beta-6</version>
+        <version>3.5.3</version>
       </extension>
     </extensions>
 
@@ -90,7 +90,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.11.0</version>
         <configuration>
           <compilerArgument>-Xlint</compilerArgument>
         </configuration>
@@ -98,7 +98,7 @@
 
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
+        <version>3.3.0</version>
         <configuration>
           <archive>
             <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
@@ -109,7 +109,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>5.1.1</version>
         <executions>
           <execution>
             <id>bundle-manifest</id>
@@ -124,7 +124,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19</version>
+        <version>3.0.0</version>
         <configuration>
           <excludes>
               <exclude>**/test/integration/**</exclude>
@@ -135,7 +135,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.19</version>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <goals>
@@ -164,7 +164,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.0.1</version>
+            <version>3.2.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -178,7 +178,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.0.0-M1</version>
+            <version>3.5.0</version>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
@@ -192,7 +192,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.6</version>
+            <version>3.0.1</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -207,7 +207,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jarsigner-plugin</artifactId>
-              <version>1.4</version>
+              <version>3.0.0</version>
               <executions>
                 <execution>
                   <id>sign</id>
@@ -221,7 +221,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-enforcer-plugin</artifactId>
-            <version>3.0.0-M1</version>
+            <version>3.3.0</version>
             <executions>
               <execution>
                 <id>enforce-versions</id>
@@ -231,11 +231,8 @@
                 <configuration>
                   <rules>
                     <requireMavenVersion>
-                      <version>3.0.5</version>
+                      <version>(3.0,4.0)</version>
                     </requireMavenVersion>
-                    <requireJavaVersion>
-                      <version>[${jdk.version},1.8]</version>
-                    </requireJavaVersion>
                   </rules>
                 </configuration>
               </execution>
