--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,9 @@
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <version>5.1.1</version>
+        <configuration>
+            <supportIncrementalBuild>true</supportIncrementalBuild>
+        </configuration>
         <executions>
           <execution>
             <id>bundle-manifest</id>
