--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
     </license>
   </licenses>
 
+  <developers>
+    <developer>
+      <name>Stig Inge Lea Bjørnsen</name>
+      <url>https://blog.silb.no</url>
+    </developer>
+  </developers>
+
   <scm>
     <connection>scm:git:https://github.com/silb/jsrlib.git</connection>
     <developerConnection>scm:git:git@github.com:silb/jsrlib.git</developerConnection>
