--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.secnod.jsrlib</groupId>
   <artifactId>jsrlib</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Jsrlib</name>
@@ -31,7 +31,7 @@
   <scm>
     <connection>scm:git:https://github.com/silb/jsrlib.git</connection>
     <developerConnection>scm:git:git@github.com:silb/jsrlib.git</developerConnection>
-    <tag>v0.0.1</tag>
+    <tag>release-0.1</tag>
     <url>https://github.com/silb/jsrlib</url>
   </scm>
 
